<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="launching_logo_description">Launching logo for Political Preparedness</string>

    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="representatives_search">Representatives Search</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="my_representatives">My Representatives</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>

    <string name="use_my_locations">Use my location</string>

    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="link_invalid">Link is not valid</string>

    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled to use this feature</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>

    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>

    <string name="facebook_link_description">Navigate to Facebook of representative</string>
    <string name="twitter_link_description">Navigate to Twitter of representative</string>
    <string name="www_link_description">Navigate to Website of representative</string>

</resources>
