<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- Add data binding node -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="search_title, address_line_1, address_line_2, city,state , zip, button_location, button_search"/>


        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:paddingHorizontal="@dimen/normal_margin"
            android:text="@string/representatives_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:autofillHints=""
            android:text="@={viewModel.addressDataFlow.line1}"
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:autofillHints=""
            android:text="@={viewModel.addressDataFlow.line2}"
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:layout_marginStart="@dimen/normal_margin"
            android:text="@={viewModel.addressDataFlow.city}"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <!-- Add default values from provided resources  -->
        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            stateValue="@{viewModel.addressDataFlow.state}"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city"/>

        <!-- Add data binding value -->
        <!-- Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:autofillHints=""
            android:text="@={viewModel.addressDataFlow.zip}"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <Button
            android:id="@+id/button_search"
            style="@style/MainButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.getRepresentatives()}"
            android:text="@string/find_my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/button_location"
            style="@style/MainButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/use_my_locations"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_search" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/representative_title"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingHorizontal="@dimen/normal_margin"
            android:text="@string/my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_search" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_representative"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@+id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            motion:visibilityMode="ignore"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>