<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_margin">

        <ImageView
            android:id="@+id/iv_representative"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_profile"
            profileImage="@{representative.official.photoUrl}"
            android:contentDescription="@{representative.office.name}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{representative.office.name}"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/normal_margin"
            app:layout_constraintStart_toEndOf="@+id/iv_representative"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Title"/>

        <TextView
            android:id="@+id/tv_subtitle1"
            style="@style/TextViewSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{representative.official.name}"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintEnd_toStartOf="@+id/iv_www"
            tools:text="Subtitle 1"/>

        <TextView
            android:id="@+id/tv_subtitle2"
            style="@style/TextViewSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{representative.official.party}"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle1"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintEnd_toEndOf="@id/tv_subtitle1"
            tools:text="Subtitle 2"/>

        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="@dimen/representative_icon_size"
            android:layout_height="@dimen/representative_icon_size"
            android:src="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_link_description"
            android:layout_marginTop="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="@dimen/representative_icon_size"
            android:layout_height="@dimen/representative_icon_size"
            android:layout_marginEnd="@dimen/normal_margin"
            android:contentDescription="@string/facebook_link_description"
            android:src="@drawable/ic_facebook"
            app:layout_constraintTop_toTopOf="@id/iv_twitter"
            app:layout_constraintEnd_toStartOf="@id/iv_twitter"/>

        <ImageView
            android:id="@+id/iv_www"
            android:layout_width="@dimen/representative_icon_size"
            android:layout_height="@dimen/representative_icon_size"
            android:layout_marginEnd="@dimen/normal_margin"
            android:contentDescription="@string/www_link_description"
            android:src="@drawable/ic_www"
            app:layout_constraintTop_toTopOf="@id/iv_twitter"
            app:layout_constraintEnd_toStartOf="@id/iv_facebook"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>